common-applications/om/om-webserver-opengauss-cn1/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: om-webserver-new-ingress
  namespace: om-webserver-opengauss
spec:
  tls:
    - hosts:
        - oneidapi.opengauss.osinfra.cn
      secretName: om-webserver-tls
  rules:
    - host: oneidapi.opengauss.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: om-webserver-service
              servicePort: 80
            path: /oneid/
